fixed css bug with scores overlapping on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -95,7 +95,7 @@ main {
 
     .score{
         margin-top: 0;
-        margin-bottom: -20px
+        margin-bottom: 0px
     }
 
 
